# libloggibud

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: LoggibudConfig.cmake.in
examples/: CMakeLists.txt  json-to-delivery.cpp  json-to-point.cpp  parse-instance.cpp
include/loggibud/: cvrp_instance.h  cvrp_solution.h  cvrp_solution_vehicle.h  delivery.h  delivery_problem_instance.h  json_dataclass_mixin.h  point.h  types.h
include/loggibud/json/: conversors.h  conversors.hpp  json_reader.h  json_schema.h  read.h
schemas/: cvrp_instance.schema.json  cvrp_solution.schema.json
src/: cvrp_instance.cpp  cvrp_solution.h  cvrp_solution_vehicle.h  delivery.h  json_read_functions.cpp  point.h
